--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -323,7 +323,7 @@
 <div class="container">
     <div class="row">
 
-            {% for i in career_center %}
+            {% for i in career_center_home %}
             <div class="col-md-4 col-xl-3">
                 <div class="card bg-c-blue order-card">
                     <img src="{{ i.logo.url }}" alt="">
@@ -351,101 +351,12 @@
 	</div>
 </div>
 
+</div>
 
-
-
-
-
-<!-- <div class="relavent-story-list-wrap">
-<div class="single-relavent-post row align-items-center">
-<div class="col-lg-5 post-left">
-<div class="feature-img relative">
-<div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="../static/images/r1.jpg" alt="" data-pagespeed-url-hash="2134107154" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Lifestyle</a></li>
-</ul>
-</div>
-<div class="col-lg-7 post-right">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4>A Discount Toner Cartridge Is
-Better Than Ever.</h4>
-</a>
-<ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-<p class="excert">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-</p>
-</div>
-</div>
-<div class="single-relavent-post row align-items-center">
-<div class="col-lg-5 post-left">
-<div class="feature-img relative">
-<div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="../static/images/r2.jpg" alt="" data-pagespeed-url-hash="2428607075" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Science</a></li>
-</ul>
-</div>
-<div class="col-lg-7 post-right">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4>A Discount Toner Cartridge Is
-Better Than Ever.</h4>
-</a>
-<ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-<p class="excert">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-</p>
-</div>
-</div>
-<div class="single-relavent-post row align-items-center">
-<div class="col-lg-5 post-left">
-<div class="feature-img relative">
-<div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="../static/images/r3.jpg" alt="" data-pagespeed-url-hash="2723106996" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Travel</a></li>
-</ul>
-</div>
-<div class="col-lg-7 post-right">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4>A Discount Toner Cartridge Is
-Better Than Ever.</h4>
-</a>
-<ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    </ul>
-<p class="excert">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-</p>
-</div>
-</div>
-</div> -->
 </div>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-</div>
 <div class="col-lg-4">
 <div class="sidebars-area">
 <div class="single-sidebar-widget editors-pick-widget">
