--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -22,7 +22,7 @@
     <div class="col-lg-12">
     <div class="hero-nav-area">
     <h1 class="text-white">Əlaqə</h1>
-    <p class="text-white link-nav"><a href="/home">Home </a> <i class="fa-solid fa-angle-right"></i><a href="#">Əlaqə </a></p>
+    <p class="text-white link-nav"><a href="/home">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#">Əlaqə </a></p>
     </div>
     </div>
     </div>
