--- a/core/templates/career_center_detail.html
+++ b/core/templates/career_center_detail.html
@@ -39,12 +39,12 @@
 
 
     <div class="row">
-    <div class="col-lg-8 post-list">
+    <div class=" post-list">
     
     <div class="single-post-wrap">
     <div class="row feature-img-thumb relative">
     <!-- <div class="overlay overlay-bg"></div> -->
-    <img  class="col-lg-4 img-fluid" src="{{ career_center.logo.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    <img  class="col-lg-3 img-fluid" src="{{ career_center.logo.url }}" alt="" data-pagespeed-url-hash="3036699310" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
         
         <div class="ml-3">
             <h3 >{{ career_center.title }}</h3>
