--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -333,8 +333,8 @@
                     <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
                 </div> -->
            </div>
-           
-           <h5 style="font-family: 'Roboto Mono', monospace;">{{ i.title }}</h5>
+
+            <a href="{{ i.get_absolute_url }}"> <h5 style="font-family: 'Roboto Mono', monospace;">{{ i.title }}</h5></a>
            <p style="text-align: center;">{{ i.company }}</p>
 
         </div>
