--- a/article/templates/detail_article.html
+++ b/article/templates/detail_article.html
@@ -22,13 +22,13 @@
     <div class="row">
     <div class="col-lg-12">
     <div class="hero-nav-area">
-    <h1 class="text-white">Image Post</h1>
-    <p class="text-white link-nav"><a href="https://preview.colorlib.com/theme/magazine/index.html">Home </a> <span class="lnr lnr-arrow-right"></span><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Post Types </a><span class="lnr lnr-arrow-right"></span><a href="https://preview.colorlib.com/theme/magazine/image-post.html">Image Post </a></p>
+    <h1 class="text-white">Məqalə Ətraflı</h1>
+    <p class="text-white link-nav"><a href="#">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#">Məqalələr </a><i class="fa-solid fa-angle-right"></i><a href="#">Məqalə ətraflı</a></p>
     </div>
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Breaking News:</span> <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Astronomy Binoculars A Great Alternative</a></h6>
+    <h6><span>Breaking News:</span> <a href="#">Məqalə ətraflı</a></h6>
     </div>
     </div>
     </div>
@@ -48,31 +48,30 @@
     </div>
     <div class="content-wrap">
     <ul class="tags mt-10">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Food Habit</a></li>
+    <li><a href="#">Food Habit</a></li>
     </ul>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">
+    <a href="#">
     <h3>{{ article.title }}</h3>
     </a>
     <ul class="meta pb-20">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ article.owner }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ article.created_at }}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ article.owner }}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ article.created_at }}</a></li>
     <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{article.views}}</a></li>
 
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 </a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{article_comments_count_detail.count}} </a></li>
     </ul>
 
     <p>
         {{ article.descrtiption }}
     </p>
-    <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</blockquote>
     <div class="navigation-wrap justify-content-between d-flex">
-    <a class="prev" href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
-    <a class="next" href="https://preview.colorlib.com/theme/magazine/image-post.html#">Next Post<span class="lnr lnr-arrow-right"></span></a>
+    <a class="prev" href="#"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
+    <a class="next" href="#">Next Post<span class="lnr lnr-arrow-right"></span></a>
     </div>
     <div class="comment-sec-area">
     <div class="container">
     <div class="row flex-column">
-    <h6>05 Comments</h6>
+    <h6>{{ article_comments_count_detail.count }} Comments</h6>
 
 
 
@@ -84,10 +83,10 @@
 <div class="single-comment justify-content-between d-flex">
 <div class="user justify-content-between d-flex">
 <div class="thumb">
-<img style="width: 60px;"  src="https://us.123rf.com/450wm/tuktukdesign/tuktukdesign1608/tuktukdesign160800043/61010830-user-icon-man-profile-businessman-avatar-person-glyph-vector-illustration.jpg?ver=6" alt="" data-pagespeed-url-hash="2260931070" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<img style="width: 60px;"  src="#" alt="" data-pagespeed-url-hash="2260931070" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="desc">
-<h5><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">{{ comment.name }}</a></h5>
+<h5><a href="#">{{ comment.name }}</a></h5>
 <p class="date">{{ comment.created_at|timesince }} əvvəl </p>
 <p class="comment">
     {{ comment.message|linebreaks }}
@@ -134,7 +133,7 @@
     <img class="img-fluid" src="../static/images/xe1.jpg.pagespeed.ic.nPdjVe0NTv.webp" alt="" data-pagespeed-url-hash="3111915323" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <ul class="tags">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Travel</a></li>
+    <li><a href="#">Travel</a></li>
     </ul>
     </div>
     <div class="details">
@@ -143,9 +142,9 @@
     Better Than Ever.</h4>
     </a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06 </a></li>
+    <li><a href="#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06 </a></li>
     </ul>
     <p class="excert">
     Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
@@ -160,8 +159,8 @@
     <a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>Help Finding Information
     Online is so easy</h6></a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06</a></li>
     </ul>
     </div>
     </div>
@@ -173,8 +172,8 @@
     <a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>Compatible Inkjet Cartr
     world famous</h6></a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06</a></li>
     </ul>
     </div>
     </div>
@@ -186,8 +185,8 @@
     <a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>5 Tips For Offshore Soft
     Development </h6></a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06</a></li>
     </ul>
     </div>
     </div>
@@ -210,7 +209,7 @@
     <input class="form-control" placeholder="Email Address" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Email Address&#39;" type="text">
     </div>
     </div>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#" class="bbtns">Subcribe</a>
+    <a href="#" class="bbtns">Subcribe</a>
     </div>
     <p>
     You can unsubscribe us at any time
@@ -228,8 +227,8 @@
     Online is so easy</h6>
     </a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06</a></li>
     </ul>
     </div>
     </div>
@@ -243,8 +242,8 @@
     world famous</h6>
     </a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06</a></li>
     </ul>
     </div>
     </div>
@@ -258,8 +257,8 @@
     Development </h6>
     </a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06</a></li>
     </ul>
     </div>
     </div>
@@ -273,8 +272,8 @@
     Development </h6>
     </a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06</a></li>
+    <li><a href="#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
+    <li><a href="#"><span class="lnr lnr-bubble"></span>06</a></li>
     </ul>
     </div>
     </div>
@@ -287,28 +286,28 @@
     <i class="fa fa-facebook" aria-hidden="true"></i>
     <p>983 Likes</p>
     </div>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Like our page</a>
+    <a href="#">Like our page</a>
     </li>
     <li class="d-flex justify-content-between align-items-center tw">
     <div class="icons d-flex flex-row align-items-center">
     <i class="fa fa-twitter" aria-hidden="true"></i>
     <p>983 Followers</p>
     </div>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Follow Us</a>
+    <a href="#">Follow Us</a>
     </li>
     <li class="d-flex justify-content-between align-items-center yt">
     <div class="icons d-flex flex-row align-items-center">
     <i class="fa fa-youtube-play" aria-hidden="true"></i>
     <p>983 Subscriber</p>
     </div>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Subscribe</a>
+    <a href="#">Subscribe</a>
     </li>
     <li class="d-flex justify-content-between align-items-center rs">
     <div class="icons d-flex flex-row align-items-center">
     <i class="fa fa-rss" aria-hidden="true"></i>
     <p>983 Subscribe</p>
     </div>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Subscribe</a>
+    <a href="#">Subscribe</a>
     </li>
     </ul>
     </div>
