--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -40,9 +40,9 @@
     <span class="lnr"> <i class="fa-solid fa-house"></i> </span>
     </div>
     <div class="contact-details">
-    <h5>Los Angeles, USA</h5>
+    <h5>Bakı şəhəri </h5>
     <p>
-    56/8, Rocky beach road
+    X küçəsi, x ev
     </p>
     </div>
     </div>
@@ -51,8 +51,8 @@
     <span class="lnr "> <i class="fa-solid fa-phone"></i></span>
     </div>
     <div class="contact-details">
-    <h5>00 (440) 9865 562</h5>
-    <p>Mon to Fri 9am to 6 pm</p>
+    <h5>+xxx(xx) xxx-xx-xx</h5>
+    <p>Iş saatı 10:00 - 18:00 arası</p>
     </div>
     </div>
     <div class="single-contact-address d-flex flex-row">
@@ -60,8 +60,8 @@
     <span class="lnr "> <i class="fa-solid fa-envelope"></i> </span>
     </div>
     <div class="contact-details">
-    <h5>support@colorlib.com</h5>
-    <p>Send us your query</p>
+    <h5>xxxxx@gmai.com</h5>
+    <p>Sizi gözləyirik</p>
     </div>
     </div>
     </div>
