--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -26,7 +26,7 @@
     <div class="container">
     <div class="row justify-content-between align-items-center">
     <div class="col-lg-4 col-md-4 col-sm-12 logo-left no-padding">
-    <a href="https://preview.colorlib.com/theme/magazine/index.html">
+    <a href="#">
     <script type="text/javascript" id="www-widgetapi-script" src="./www-widgetapi.js" async=""></script><script type="text/javascript" async="" src="./analytics.js"></script><script src="./iframe_api"></script><script data-pagespeed-no-defer="">//<![CDATA[
     (function(){for(var g="function"==typeof Object.defineProperties?Object.defineProperty:function(b,c,a){if(a.get||a.set)throw new TypeError("ES3 does not support getters and setters.");b!=Array.prototype&&b!=Object.prototype&&(b[c]=a.value)},h="undefined"!=typeof window&&window===this?this:"undefined"!=typeof global&&null!=global?global:this,k=["String","prototype","repeat"],l=0;l<k.length-1;l++){var m=k[l];m in h||(h[m]={});h=h[m]}
     var n=k[k.length-1],p=h[n],q=p?p:function(b){var c;if(null==this)throw new TypeError("The 'this' value for String.prototype.repeat must not be null or undefined");c=this+"";if(0>b||1342177279<b)throw new RangeError("Invalid count value");b|=0;for(var a="";b;)if(b&1&&(a+=c),b>>>=1)c+=c;return a};q!=p&&null!=q&&g(h,n,{configurable:!0,writable:!0,value:q});var t=this;
@@ -38,8 +38,8 @@
     function B(){var b={},c;c=document.getElementsByTagName("IMG");if(!c.length)return{};var a=c[0];if(!("naturalWidth"in a&&"naturalHeight"in a))return{};for(var d=0;a=c[d];++d){var e=a.getAttribute("data-pagespeed-url-hash");e&&(!(e in b)&&0<a.width&&0<a.height&&0<a.naturalWidth&&0<a.naturalHeight||e in b&&a.width>=b[e].o&&a.height>=b[e].m)&&(b[e]={rw:a.width,rh:a.height,ow:a.naturalWidth,oh:a.naturalHeight})}return b}var C="";u("pagespeed.CriticalImages.getBeaconData",function(){return C});
     u("pagespeed.CriticalImages.Run",function(b,c,a,d,e,f){var r=new y(b,c,a,e,f);x=r;d&&w(function(){window.setTimeout(function(){A(r)},0)})});})();
     
-    pagespeed.CriticalImages.Run('/mod_pagespeed_beacon','https://preview.colorlib.com/theme/magazine/','-ilGEe-FWC',true,false,'YwNettDG2vg');
-    //]]></script><img class="img-fluid" src="{% static 'images/logo.png' %}" alt="" data-pagespeed-url-hash="1405544234" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    pagespeed.CriticalImages.Run('/mod_pagespeed_beacon','#','-ilGEe-FWC',true,false,'YwNettDG2vg');
+    //]]></script><img class="img-fluid" style="width: 200px;" src="{% static 'images/isguzar.png' %}" alt="" data-pagespeed-url-hash="1405544234" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </a>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 logo-right no-padding ads-banner">
@@ -53,20 +53,20 @@
     <div class="row align-items-center justify-content-between">
     <nav id="nav-menu-container">
     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
-    <li class="menu-active"><a href="/home">Home</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/archive.html">Archive</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/category.html">Category</a></li>
-    <li class="menu-has-children"><a href="https://preview.colorlib.com/theme/magazine/" class="sf-with-ul">Post Types</a>
+    <li class="menu-active"><a href="/home">Ana səhifə</a></li>
+    <li><a href="/news">Xəbərlər</a></li>
+    <li><a href="/career_center">Karyera</a></li>
+    <li class="menu-has-children"><a href="#" class="sf-with-ul">CV Yarat</a>
     <ul style="display: none;">
-    <li><a href="https://preview.colorlib.com/theme/magazine/standard-post.html">Standard Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html">Image Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/gallery-post.html">Gallery Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/video-post.html">Video Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/audio-post.html">Audio Post</a></li>
+    <li><a href="#">Standard Post</a></li>
+    <li><a href="#">Image Post</a></li>
+    <li><a href="#">Gallery Post</a></li>
+    <li><a href="#">Video Post</a></li>
+    <li><a href="#">Audio Post</a></li>
     </ul>
     </li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/about.html">About</a></li>
-    <li><a href="/contact">Contact</a></li>
+    <li><a href="#">Haqqımızda</a></li>
+    <li><a href="/contact">Əlaqə</a></li>
     </ul>
     </nav>
     <div class="navbar-right">
@@ -83,20 +83,20 @@
     </div>
     <nav id="mobile-nav">
     <ul class="" style="touch-action: pan-y;" id="">
-    <li class="menu-active"><a href="https://preview.colorlib.com/theme/magazine/index.html">Home</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/archive.html">Archive</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/category.html">Category</a></li>
-    <li class="menu-has-children"><i class="lnr lnr-chevron-down"></i><a href="https://preview.colorlib.com/theme/magazine/" class="sf-with-ul">Post Types</a>
+    <li class="menu-active"><a href="#">Home</a></li>
+    <li><a href="#">Archive</a></li>
+    <li><a href="#">Category</a></li>
+    <li class="menu-has-children"><i class="lnr lnr-chevron-down"></i><a href="#" class="sf-with-ul">Post Types</a>
     <ul style="display: none;">
-    <li><a href="https://preview.colorlib.com/theme/magazine/standard-post.html">Standard Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html">Image Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/gallery-post.html">Gallery Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/video-post.html">Video Post</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/audio-post.html">Audio Post</a></li>
+    <li><a href="#">Standard Post</a></li>
+    <li><a href="#">Image Post</a></li>
+    <li><a href="#">Gallery Post</a></li>
+    <li><a href="#">Video Post</a></li>
+    <li><a href="#">Audio Post</a></li>
     </ul>
     </li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/about.html">About</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/contact.html">Contact</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
     </ul>
     </nav><div id="mobile-body-overly"></div></div>
     </header>
