--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -39,7 +39,7 @@
 </div>
 <div class="top-post-details">
 <ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Food Habit</a></li>
+<li><a href="#">Food Habit</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
 <h3>{{i.title|truncatechars:40}}</h3>
@@ -72,10 +72,10 @@
     </div>
     <div class="top-post-details">
     <ul class="tags">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#">Food Habit</a></li>
+    <li><a href="#">Food Habit</a></li>
     </ul>
     <a href="{{i.get_absolute_url}}">
-    <h4>{{ i.title|truncatechars:40 }} </h4>
+    <h4>{{ i.title|truncatechars:35 }} </h4>
     </a>
     <ul class="meta">
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
@@ -98,10 +98,10 @@
 </div>
 <div class="top-post-details">
 <ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Food Habit</a></li>
+<li><a href="#">Food Habit</a></li>
 </ul>
 <a href="{{i.get_absolute_url}}">
-<h4>{{ i.title|truncatechars:40 }} </h4>
+<h4>{{ i.title|truncatechars:35 }} </h4>
 </a>
 <ul class="meta">
 <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
@@ -157,12 +157,12 @@
 <img class="img-fluid" src="{{i.image.url}}" alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Lifestyle</a></li>
+<li><a href="#">Lifestyle</a></li>
 </ul>
 </div>
 <div class="col-lg-7 post-right">
 <a href="{{i.get_absolute_url}}">
-<h4>{{i.title|truncatechars:40 }}</h4>
+<h4>{{i.title|truncatechars:47 }}</h4>
 </a>
 <ul class="meta">
 <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{i.owner}}</a></li>
@@ -208,7 +208,7 @@
 </div>
 <div class="details">
 <ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Food Habit</a></li>
+<li><a href="#">Food Habit</a></li>
 </ul>
 <a href="{{item.get_absolute_url}}">
 <h3>{{ item.title }}</h3>
@@ -237,7 +237,7 @@
 <img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3331199231" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Travel</a></li>
+<li><a href="#">Travel</a></li>
 </ul>
 </div>
 <div class="details">
@@ -314,7 +314,7 @@
 
 
 <div class="relavent-story-post-wrap mt-30">
-<h4 class="title">Kariyera Mərkəzi</h4>
+<h4 class="title">Karyera Mərkəzi</h4>
 
 
 
@@ -360,7 +360,7 @@
 <div class="col-lg-4">
 <div class="sidebars-area">
 <div class="single-sidebar-widget editors-pick-widget">
-<h6 class="title">Editor’s Pick</h6>
+<h6 class="title">Lorem ipsum</h6>
 <div class="editors-pick-post">
 <div class="feature-img-wrap relative">
 <div class="feature-img relative">
@@ -368,17 +368,17 @@
 <img class="img-fluid" src="../static/images/e1.jpg" alt="" data-pagespeed-url-hash="3111915323" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Travel</a></li>
+<li><a href="#">Travel</a></li>
 </ul>
 </div>
 <div class="details">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4 class="mt-20">A Discount Toner Cartridge Is
-Better Than Ever.</h4>
+<a href="#">
+<h4 class="mt-20">Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit. </h4>
 </a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>16 may 2022</a></li>
     </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
@@ -390,11 +390,11 @@ Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor 
 <img src="../static/images/e2.jpg" alt="" data-pagespeed-url-hash="3406415244" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="detail">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>Help Finding Information
-Online is so easy</h6></a>
+<a href="#"><h6>Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit.</h6></a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
     </ul>
 </div>
 </div>
@@ -403,11 +403,11 @@ Online is so easy</h6></a>
 <img src="../static/images/e3.jpg" alt="" data-pagespeed-url-hash="3700915165" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="detail">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>Compatible Inkjet Cartr
-world famous</h6></a>
+<a href="#"><h6>Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit.</h6></a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
     </ul>
 </div>
 </div>
@@ -416,11 +416,11 @@ world famous</h6></a>
 <img src="../static/images/e4.jpg" alt="" data-pagespeed-url-hash="3995415086" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="detail">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>5 Tips For Offshore Soft
-Development </h6></a>
+<a href="#"><h6>Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit.</h6></a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
     </ul>
 </div>
 </div>
@@ -439,11 +439,9 @@ Development </h6></a>
 
 
 <div class="single-sidebar-widget newsletter-widget">
-<h6 class="title">Newsletter</h6>
+<h6 class="title">Bizə qoşulun</h6>
 <p>
-Here, I focus on a range of items
-andfeatures that we use in life without
-giving them a second thought.
+Bizə qoşularaq iş elanlarından və son xebərlərdən xəbərdar olun
 </p>
 {% if submitted %}
 <p class="success">
@@ -467,7 +465,7 @@ giving them a second thought.
 
 <button type="submit" class="primary-btn text-uppercase"> Göndər</button>
 
-<!-- <a href="https://preview.colorlib.com/theme/magazine/#" class="bbtns">Subcribe</a> -->
+<!-- <a href="#" class="bbtns">Subcribe</a> -->
 </div>
 </form>
 {% for message in messages %}
@@ -485,20 +483,20 @@ giving them a second thought.
 
 
 <div class="single-sidebar-widget most-popular-widget">
-<h6 class="title">Most Popular</h6>
+<h6 class="title">Lorem, ipsum</h6>
 <div class="single-list flex-row d-flex">
 <div class="thumb">
 <img src="../static/images/m1.jpg" alt="" data-pagespeed-url-hash="2510187219" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="details">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h6>Help Finding Information
-Online is so easy</h6>
+<a href="#">
+<h6>Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit.</h6>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06</a></li>
-</ul>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    </ul>
 </div>
 </div>
 <div class="single-list flex-row d-flex">
@@ -506,14 +504,14 @@ Online is so easy</h6>
 <img src="../static/images/m2.jpg" alt="" data-pagespeed-url-hash="2804687140" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="details">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h6>Compatible Inkjet Cartr
-world famous</h6>
+<a href="#">
+<h6>Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit.</h6>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06</a></li>
-</ul>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    </ul>
 </div>
 </div>
 <div class="single-list flex-row d-flex">
@@ -521,14 +519,14 @@ world famous</h6>
 <img src="../static/images/m3.jpg" alt="" data-pagespeed-url-hash="3099187061" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="details">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h6>5 Tips For Offshore Soft
-Development </h6>
+<a href="#">
+<h6>Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit. </h6>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06</a></li>
-</ul>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    </ul>
 </div>
 </div>
 <div class="single-list flex-row d-flex">
@@ -536,47 +534,47 @@ Development </h6>
 <img src="../static/images/m4.jpg" alt="" data-pagespeed-url-hash="3393686982" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <div class="details">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h6>5 Tips For Offshore Soft
-Development </h6>
+<a href="#">
+<h6>Lorem, ipsum dolor sit 
+    amet consectetur adipisicing elit.</h6>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06</a></li>
-</ul>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    </ul>
 </div>
 </div>
 </div>
 <div class="single-sidebar-widget social-network-widget">
-<h6 class="title">Social Networks</h6>
+<h6 class="title">Sosial şəbəkə</h6>
 <ul class="social-list">
 <li class="d-flex justify-content-between align-items-center fb">
 <div class="icons d-flex flex-row align-items-center">
 <i class="fa fa-facebook" aria-hidden="true"></i>
-<p>983 Likes</p>
+<p>983 Bəyənmə</p>
 </div>
-<a href="https://preview.colorlib.com/theme/magazine/#">Like our page</a>
+<a href="#">Səhifəni bəyən</a>
 </li>
 <li class="d-flex justify-content-between align-items-center tw">
 <div class="icons d-flex flex-row align-items-center">
 <i class="fa fa-twitter" aria-hidden="true"></i>
-<p>983 Followers</p>
+<p>983 İzləyici</p>
 </div>
-<a href="https://preview.colorlib.com/theme/magazine/#">Follow Us</a>
+<a href="#">Bizi izlə</a>
 </li>
 <li class="d-flex justify-content-between align-items-center yt">
 <div class="icons d-flex flex-row align-items-center">
 <i class="fa fa-youtube-play" aria-hidden="true"></i>
-<p>983 Subscriber</p>
+<p>983 Abunəçi</p>
 </div>
-<a href="https://preview.colorlib.com/theme/magazine/#">Subscribe</a>
+<a href="#">Abunə ol</a>
 </li>
 <li class="d-flex justify-content-between align-items-center rs">
 <div class="icons d-flex flex-row align-items-center">
 <i class="fa fa-rss" aria-hidden="true"></i>
-<p>983 Subscribe</p>
+<p>983 Abunəçi</p>
 </div>
-<a href="https://preview.colorlib.com/theme/magazine/#">Subscribe</a>
+<a href="#">Abunə ol</a>
 </li>
 </ul>
 </div>
