--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -49,7 +49,7 @@
     </div>
     </div>
     
-    <div class="container main-menu" id="main-menu"><button type="button" id="mobile-nav-toggle"><i class="lnr lnr-menu"></i><span class="menu-title">Menu</span> </button>
+    <div class="container main-menu" id="main-menu"><button type="button" id="mobile-nav-toggle"><i class="fa-solid fa-bars"></i><span class="menu-title">Menu</span> </button>
     <div class="row align-items-center justify-content-between">
     <nav id="nav-menu-container">
     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
