--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -52,7 +52,7 @@
     <div class="container main-menu" id="main-menu">
       <button type="button" id="mobile-nav-toggle">
         <i class="fa-solid fa-bars"></i>
-        <span class="menu-title">Menu</span> 
+        <!-- <span class="menu-title">Menu</span>  -->
       </button>
 
 
