--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -49,7 +49,7 @@
     </div>
     </div>
     
-    <div class="container " id="main-menu">
+    <div class="container main-menu" id="">
       <button type="button" id="mobile-nav-toggle">
         <i class="fa-solid fa-bars"></i>
         <!-- <span class="menu-title">Menu</span>  -->
