--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -49,8 +49,8 @@
     </div>
     </div>
     
-    <div class="container main-menu" id="">
-      <button type="button" id="mobile-nav-toggle">
+    <div class="container main-menu" id="main-menu">
+      <button type="button" id="">
         <i class="fa-solid fa-bars"></i>
         <!-- <span class="menu-title">Menu</span>  -->
       </button>
