--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -50,7 +50,7 @@
     </div>
     
     <div class="container main-menu" id="main-menu">
-      <button type="button" id="">
+      <button type="button" id="mobile-nav-toggle">
         <i class="fa-solid fa-bars"></i>
         <!-- <span class="menu-title">Menu</span>  -->
       </button>
