--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -39,7 +39,10 @@
     u("pagespeed.CriticalImages.Run",function(b,c,a,d,e,f){var r=new y(b,c,a,e,f);x=r;d&&w(function(){window.setTimeout(function(){A(r)},0)})});})();
     
     pagespeed.CriticalImages.Run('/mod_pagespeed_beacon','#','-ilGEe-FWC',true,false,'YwNettDG2vg');
-    //]]></script><img class="img-fluid" style="width: 200px;" src="{% static 'images/isguzar.png' %}" alt="" data-pagespeed-url-hash="1405544234" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    //]]></script> 
+    <a href="/">
+     <img class="img-fluid" style="width: 200px;" src="{% static 'images/isguzar.png' %}" alt="" data-pagespeed-url-hash="1405544234" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+
     </a>
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 logo-right no-padding ads-banner">
@@ -52,7 +55,7 @@
     <div class="container main-menu" id="main-menu">
       <button type="button" id="mobile-nav-toggle">
         <i class="fa-solid fa-bars"></i>
-        <!-- <span class="menu-title">Menu</span>  -->
+        <span class="menu-title">Menu</span> 
       </button>
 
 
