--- a/article/templates/article.html
+++ b/article/templates/article.html
@@ -66,7 +66,7 @@
     <ul class="meta">
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
-        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
     {{i.descrtiption|truncatechars:150}}
