--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Breaking News:</span> <a href="https://preview.colorlib.com/theme/magazine/archive.html#">Astronomy Binoculars A Great Alternative</a></h6>
+    <h6><span>Bütün xəbərlər</span> <a href="https://preview.colorlib.com/theme/magazine/archive.html#">Lorem ipsum</a></h6>
     </div>
     </div>
     </div>
@@ -63,7 +63,7 @@
     <ul class="meta">
         <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
         <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
     {{i.descrtiption|truncatechars:200}}
