--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -63,7 +63,7 @@
     <ul class="meta">
         <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
         <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{ i.views }}</a></li>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
     {{i.descrtiption|truncatechars:200}}
