--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -127,7 +127,7 @@
     <div class="col-lg-4">
         <div class="sidebars-area">
         <div class="single-sidebar-widget editors-pick-widget">
-        <h6 class="title">Lorem ipsum</h6>
+        <h6 class="title">Lorem ipsumm</h6>
         <div class="editors-pick-post">
         <div class="feature-img-wrap relative">
         <div class="feature-img relative">
