--- a/article/templates/popular_article.html
+++ b/article/templates/popular_article.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Breaking News:</span> <a href="https://preview.colorlib.com/theme/magazine/archive.html#">Astronomy Binoculars A Great Alternative</a></h6>
+    <h6><span> Bütün popular məqalələr</span> <a href="https://preview.colorlib.com/theme/magazine/archive.html#">Lorem ipsum</a></h6>
     </div>
     </div>
     </div>
