--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -81,7 +81,7 @@
     <div class="navbar-right">
     <form class="Search" action="" method="GET" role="search">
     <input type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
-    <label for="Search-box" class="Search-box-label">
+    <label >
       <a href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </label>
 
