--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -82,7 +82,7 @@
     <form class="Search" action="" method="GET" role="search">
     <input type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
     <label >
-      <a class="Search-box-label" href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
+      <a class="Search-box-label" href="/search">  <i style="font-size: 20px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </label>
 
     </form>
