--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -81,9 +81,9 @@
     <div class="navbar-right">
     <form class="Search" action="" method="GET" role="search">
     <input type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
-    <label >
+    <span >
       <a class="Search-box-label" href="/search">  <i style="font-size: 20px;" class="fa-solid fa-magnifying-glass"></i> </a>
-    </label>
+    </span>
 
     </form>
     </div>
