--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -79,12 +79,9 @@
     </ul>
     </nav>
     <div class="navbar-right">
-    <form class="Search" action="" method="GET" role="search">
-    <span >
-      <a class="searchicon" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
-    </span>
-
-    </form>
+      <span>
+        <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> 
+      </span>
     </div>
     </div>
 
