--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -77,12 +77,15 @@
     <li><a href="#">Haqqımızda</a></li>
     <li><a href="/contact">Əlaqə</a></li>
     </ul>
-    </nav>
-    <div class="navbar-right">
-      <span>
+
+
+    <div class="justify-content-end">
+      <div>
         <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> 
-      </span>
+      </div>
     </div>
+    </nav>
+    
     </div>
 
     <div id="mobile-body-overly"></div></div>
