--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -78,10 +78,13 @@
     <li><a href="/contact">Əlaqə</a></li>
     </ul>
     </nav>
-    <div class="justify-content-end">
-      <div>
-        <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> 
-      </div>
+    <div class="navbar-right">
+    <form class="Search" action="" method="GET" role="search">
+    <div >
+      <a class="searchicon" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
+    </div>
+
+    </form>
     </div>
     </div>
 
