--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -79,7 +79,7 @@
     </ul>
     </nav>
     <div class="navbar-right">
-    <form class="Search" action="" method="GET" role="search">
+    <form class="" action="" >
     <div >
       <a class="justify-content-end" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </div>
