--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -78,14 +78,14 @@
     <li class="justify-content-end"><a href="/contact">Əlaqə</a></li>
     </ul>
     </nav>
-    <!-- <div class="navbar-right">
+    <div class="navbar-right">
     <form class="" action="" >
     <div >
       <a class="justify-content-end" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </div>
 
     </form>
-    </div> -->
+    </div>
     </div>
 
     <div id="mobile-body-overly"></div></div>
