--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -77,6 +77,7 @@
     <li><a href="#">Haqqımızda</a></li>
     <li class="justify-content-end"><a href="/contact">Əlaqə</a></li>
     </ul>
+    </nav>
     <!-- <div class="navbar-right">
     <form class="" action="" >
     <div >
@@ -87,14 +88,13 @@
     </div> -->
     
   
-    <nav class="navbar navbar-light bg-light justify-content-between">
+    <nav class="navbar navbar-light bg-light justify-content-end">
       <form class="form-inline">
         <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
         <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
       </form>
     </nav>
 
-  </nav>
 
   
   </div>
