--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -75,30 +75,21 @@
     </ul>
     </li>
     <li><a href="#">Haqqımızda</a></li>
-    <li class="justify-content-end"><a href="/contact">Əlaqə</a></li>
+    <li><a href="/contact">Əlaqə</a></li>
     </ul>
     </nav>
-    <!-- <div class="navbar-right">
-    <form class="" action="" >
-    <div >
-      <a class="justify-content-end" href="/search">  <i style="font-size: 20px; margin-left: 340px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
-    </div>
-
+    <div class="navbar-right">
+    <form class="Search" action="" method="GET" role="search">
+    <input type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
+    <label for="Search-box" class="Search-box-label">
+      <a href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
+    </label>
+    <span class="Search-close">
+        <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-circle-xmark"></i>
+    </span>
     </form>
-    </div> -->
-    
-  
-    <nav class="navbar navbar-light bg-light justify-content-end">
-      <form class="form-inline">
-        <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
-        <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-      </form>
-    </nav>
-
-
-  
-  </div>
-
+    </div>
+    </div>
 
     <div id="mobile-body-overly"></div></div>
     </header>
