--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -76,15 +76,10 @@
     </li>
     <li><a href="#">Haqqımızda</a></li>
     <li><a href="/contact">Əlaqə</a></li>
-    <div class="navbar-right">
-    <form class="Search" action="" method="GET" role="search">
-    <input style="display: none;" type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
-    <label for="Search-box" class="Search-box-label">
-      <a href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
-    </label>
 
-    </form>
-    </div>
+    <li><a href="/contact">axtaris</a></li>
+
+
     </ul>
     </nav>
     </div>
@@ -101,3 +96,18 @@
         <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
       </form>
     </nav> -->
+
+
+
+
+
+
+    <!-- <div class="navbar-right">
+      <form class="Search" action="" method="GET" role="search">
+      <input style="display: none;" type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
+      <label for="Search-box" class="Search-box-label">
+        <a href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
+      </label>
+  
+      </form>
+      </div> -->
