--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -77,8 +77,9 @@
     <li><a href="#">Haqqımızda</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
-    <li><a href="/contact">axtaris</a></li>
-
+    <div class="justify-content-end">
+    <li ><a href="/contact">axtaris</a></li>
+  </div>
 
     </ul>
     </nav>
