--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -78,8 +78,8 @@
     <li><a href="/contact">Əlaqə</a></li>
 
     <div class="justify-content-end">
-    <li ><a href="/contact">axtaris</a></li>
-  </div>
+      <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
+    </div>
 
     </ul>
     </nav>
