--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -78,8 +78,8 @@
     <li><a href="/contact">Əlaqə</a></li>
 
     <div class="justify-content-end">
-      <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
-    </div>
+    <li ><a href="/contact">  <i style="" class="fa-solid fa-magnifying-glass"></i>  </a></li>
+  </div>
 
     </ul>
     </nav>
@@ -91,6 +91,12 @@
 
 
 
+
+    <!-- <nav class="navbar navbar-light bg-light justify-content-end">
+      <form class="form-inline">
+        <a class="" href="/search">  <i style="" class="fa-solid fa-magnifying-glass"></i> </a>
+      </form>
+    </nav> -->
 
 
 
