--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -237,7 +237,7 @@
 <img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3331199231" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="#">Travel</a></li>
+<li><a href="#">2 dəqiqəlik</a></li>
 </ul>
 </div>
 <div class="details">
@@ -270,7 +270,7 @@
 <img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3625699152" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="">Travel</a></li>
+<li><a href="">2 dəqiqəlik</a></li>
 </ul>
 </div>
 <div class="details">
