--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -77,9 +77,9 @@
     <li><a href="#">Haqqımızda</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
-    <div class="">
+    <!-- <div class="">
     <li ><a href="/contact">  <i style="margin-left: 460px;" class="fa-solid fa-magnifying-glass"></i>  </a></li>
-  </div>
+  </div> -->
 
     </ul>
     </nav>
