--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Bütün xəbərlər</span> <a href="https://preview.colorlib.com/theme/magazine/archive.html#">Lorem ipsum</a></h6>
+    <h6><span>Bütün xəbərlər</span> <a href="#">Lorem ipsum</a></h6>
     </div>
     </div>
     </div>
@@ -50,7 +50,7 @@
     <img class="img-fluid" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <ul class="tags">
-    <li><a href="https://preview.colorlib.com/theme/magazine/archive.html#">Lifestyle</a></li>
+    <li><a href="#">Lifestyle</a></li>
     </ul>
     </div>
 
@@ -61,9 +61,9 @@
     <h4>{{ i.title|truncatechars:40 }}</h4>
     </a>
     <ul class="meta">
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
         </ul> 
     <p class="excert">
     {{i.descrtiption|truncatechars:200}}
@@ -106,7 +106,7 @@
 
 
     <!-- <div class="load-more">
-    <a href="https://preview.colorlib.com/theme/magazine/archive.html#" class="primary-btn">Load More Posts</a>
+    <a href="#" class="primary-btn">Load More Posts</a>
     </div> -->
 
 
