--- a/article/templates/popular_article.html
+++ b/article/templates/popular_article.html
@@ -27,7 +27,7 @@
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span> Bütün popular məqalələr</span> <a href="https://preview.colorlib.com/theme/magazine/archive.html#">Lorem ipsum</a></h6>
+    <h6><span> Bütün popular məqalələr</span> <a href="#">Lorem ipsum</a></h6>
     </div>
     </div>
     </div>
@@ -50,7 +50,7 @@
     <img class="img-fluid" src="{{ i.image.url }}" alt="" data-pagespeed-url-hash="2585403232" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <ul class="tags">
-    <li><a href="https://preview.colorlib.com/theme/magazine/archive.html#">Lifestyle</a></li>
+    <li><a href="#">Lifestyle</a></li>
     </ul>
     </div>
 
@@ -110,7 +110,7 @@
 
 
     <!-- <div class="load-more">
-    <a href="https://preview.colorlib.com/theme/magazine/archive.html#" class="primary-btn">Load More Posts</a>
+    <a href="#" class="primary-btn">Load More Posts</a>
     </div> -->
 
 
