--- a/news/templates/detail_news.html
+++ b/news/templates/detail_news.html
@@ -23,12 +23,12 @@
     <div class="col-lg-12">
     <div class="hero-nav-area">
     <h1 class="text-white">Xəbər Ətrafı</h1>
-    <p class="text-white link-nav"><a href="https://preview.colorlib.com/theme/magazine/index.html">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#">Xəbərlər </a><i class="fa-solid fa-angle-right"></i><a href="#">Xəbər ətraflı </a></p>
+    <p class="text-white link-nav"><a href="#">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#">Xəbərlər </a><i class="fa-solid fa-angle-right"></i><a href="#">Xəbər ətraflı </a></p>
     </div>
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
-    <h6><span>Ətraflı xəbərlər</span> <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Lorem ipsum</a></h6>
+    <h6><span>Ətraflı xəbərlər</span> <a href="#">Lorem ipsum</a></h6>
     </div>
     </div>
     </div>
@@ -48,16 +48,16 @@
     </div>
     <div class="content-wrap">
     <ul class="tags mt-10">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Food Habit</a></li>
+    <li><a href="#">Food Habit</a></li>
     </ul>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#">
+    <a href="#">
     <h3>{{ news.title }}</h3>
     </a>
     <ul class="meta pb-20">
         <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{news.views}}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ news.created_at }}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ news.created_at }}</a></li>
 
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>  {{news_comments_count_detail.count}}  </a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>  {{news_comments_count_detail.count}}  </a></li>
 
 
     </ul>
@@ -66,8 +66,8 @@
         {{ news.descrtiption }}
     </p>
     <div class="navigation-wrap justify-content-between d-flex">
-    <a class="prev" href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
-    <a class="next" href="https://preview.colorlib.com/theme/magazine/image-post.html#">Next Post<span class="lnr lnr-arrow-right"></span></a>
+    <a class="prev" href="#"><span class="lnr lnr-arrow-left"></span>Prev Post</a>
+    <a class="next" href="#">Next Post<span class="lnr lnr-arrow-right"></span></a>
     </div>
     <div class="comment-sec-area">
     <div class="container">
@@ -85,7 +85,7 @@
     <img style="width: 60px;"  src="https://us.123rf.com/450wm/tuktukdesign/tuktukdesign1608/tuktukdesign160800043/61010830-user-icon-man-profile-businessman-avatar-person-glyph-vector-illustration.jpg?ver=6" alt="" data-pagespeed-url-hash="2260931070" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <div class="desc">
-    <h5><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">{{ comment.name }}</a></h5>
+    <h5><a href="#">{{ comment.name }}</a></h5>
     <p class="date">{{ comment.created_at|timesince }} əvvəl </p>
     <p class="comment">
         {{ comment.message|linebreaks }}
