--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -65,10 +65,10 @@
     <li class="menu-active"><a href="/">Ana səhifə</a></li>
     <li><a href="/news">Xəbərlər</a></li>
     <li><a href="/career_center">Karyera</a></li>
-    <li class="menu-has-children"><a href="#" class="sf-with-ul">CV Yarat</a>
+    <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
     <ul style="display: none;">
-    <li><a href="#">Standard Post</a></li>
-    <li><a href="#">Image Post</a></li>
+    <li><a href="#">Iş elanları</a></li>
+    <li><a href="#">CV yarat</a></li>
     <li><a href="#">Gallery Post</a></li>
     <li><a href="#">Video Post</a></li>
     <li><a href="#">Audio Post</a></li>
