--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -63,16 +63,22 @@
     <nav id="nav-menu-container">
     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
     <li class="menu-active"><a href="/">Ana səhifə</a></li>
-    <li><a href="/news">Xəbərlər</a></li>
-    <li><a href="/career_center">Karyera</a></li>
+    <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
+      <ul style="display: none;">
+      <li><a href="#">Elm və texnoloiya</a></li>
+      <li><a href="#">Dizayn və inovasiya</a></li>
+      <li><a href="#"> İNcəsənət və mədəniyyət</a></li>
+      <li><a href="#">Biznes</a></li>
+      </ul>
+    
+      </li>
+    <!-- <li><a href="/career_center">Karyera</a></li> -->
     <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
     <ul style="display: none;">
     <li><a href="#">Iş elanları</a></li>
     <li><a href="#">CV yarat</a></li>
-    <!-- <li><a href="#">Gallery Post</a></li>
-    <li><a href="#">Video Post</a></li>
-    <li><a href="#">Audio Post</a></li> -->
     </ul>
+  
     </li>
     <li><a href="#">Haqqımızda</a></li>
     <li><a href="/contact">Əlaqə</a></li>
