--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -63,15 +63,30 @@
     <nav id="nav-menu-container">
     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
     <li class="menu-active"><a href="/">Ana səhifə</a></li>
-    <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
+    <li class="menu-has-children"><a href="#" class="sf-with-ul">Xəbər</a>
       <ul style="display: none;">
+        <li><a href="#">Biznes</a></li>
       <li><a href="#">Elm və texnoloiya</a></li>
       <li><a href="#">Dizayn və inovasiya</a></li>
-      <li><a href="#"> İNcəsənət və mədəniyyət</a></li>
-      <li><a href="#">Biznes</a></li>
+      <li><a href="#"> İncəsənət və mədəniyyət</a></li>
       </ul>
     
       </li>
+
+
+      <li class="menu-has-children"><a href="#" class="sf-with-ul">Mövzular </a>
+        <ul style="display: none;">
+          <li><a href="#">Marketink</a></li>
+          <li><a href="#">Marketink hekayələri</a></li>
+        <li><a href="#">İnsan resursları</a></li>
+        <li><a href="#"> Logistika</a></li>
+        <li><a href="#">Sağlamlıq</a></li>
+        </ul>
+      
+        </li>
+
+
+
     <!-- <li><a href="/career_center">Karyera</a></li> -->
     <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
     <ul style="display: none;">
