--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -91,11 +91,12 @@
     <li class="menu-has-children"><a href="#" class="sf-with-ul">Kariyera</a>
     <ul style="display: none;">
     <li><a href="#">Iş elanları</a></li>
+    <li><a href="#">Elanını yayınla</a></li>
     <li><a href="#">CV yarat</a></li>
     </ul>
   
     </li>
-    <li><a href="#">Haqqımızda</a></li>
+    <li><a href="#">Müəllifimiz ol</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
     <!-- <div class="">
