--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -96,7 +96,7 @@
     </ul>
   
     </li>
-    <li><a href="#">Müəllifimiz ol</a></li>
+    <li><a href="#">Müəllifimiz olma</a></li>
     <li><a href="/contact">Əlaqə</a></li>
 
     <!-- <div class="">
