--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -15,16 +15,22 @@
     <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
 
     <select class="custom-select" id="inputGroupSelect01">
-        <option selected>Choose...</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
+        <option selected>Iş vəiyyətiniz</option>
+        <option value="1">Sektordayam</option>
+        <option value="2">Tələbəyəm</option>
+        <option value="3">Işləmirəm</option>
       </select>
     
     <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
-    <input name="name" placeholder="Enter your name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter your name&#39;" class="common-input mb-20 form-control" required="" type="text">
 
+
+    <select class="custom-select" id="inputGroupSelect01">
+        <option selected>Nə qədər vaxtdan bir məzmun təqdim edə bilərsiniz?</option>
+        <option value="1">Həftədə 1-2 məqalə</option>
+        <option value="2">Həftədə 3-4 məqalə</option>
+        <option value="3">Ayda 1-2 məqalə</option>
+      </select>
 
 
 {% endblock %}
