--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-
+<div class="container">
     <input name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Ad ve Soyad&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text">
@@ -20,7 +20,7 @@
         <option value="2">Tələbəyəm</option>
         <option value="3">Işləmirəm</option>
       </select>
-      <hr>
+      <br>
     
     <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Təhsil və sənayə təcrübəniz&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Hansı mövzuda yaza bilərsiniz?&#39;" class="common-input mb-20 form-control" required="" type="text">
@@ -33,6 +33,7 @@
         <option value="3">Ayda 1-2 məqalə</option>
       </select>
 
-      <hr>
+<br>
 
+</div>
 {% endblock %}
