--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -14,13 +14,13 @@
     <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text">
 
-    <select class="custom-select" id="inputGroupSelect01">
+    <select style="border-bottom: 5px;" class="custom-select" id="inputGroupSelect01">
         <option selected>Iş vəiyyətiniz</option>
         <option value="1">Sektordayam</option>
         <option value="2">Tələbəyəm</option>
         <option value="3">Işləmirəm</option>
       </select>
-      <br>
+      
     
     <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Təhsil və sənayə təcrübəniz&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="Hansı mövzuda yaza bilərsiniz?" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Hansı mövzuda yaza bilərsiniz?&#39;" class="common-input mb-20 form-control" required="" type="text">
