--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -12,7 +12,7 @@
 
 <div class="container">
 
-    <h1 style="text-align: center;">Yazarımız ol</h1>
+    <h1 style="text-align: center; margin-top: 5px;">Yazarımız ol!</h1>
 
     <input style="margin-top: 15px;" name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Ad ve Soyad&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text">
