--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -11,10 +11,13 @@
 
 
 <div class="container">
+    <form class="form-area contact-form text-right"  action="" method="POST">
+
 
     <h1 style="text-align: center; margin-top: 5px;">Yazarımız ol!</h1>
 
     <input style="margin-top: 15px;" name="name" placeholder="Ad ve Soyad" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Ad ve Soyad&#39;" class="common-input mb-20 form-control" required="" type="text">
+
     <input name="name" placeholder="E-Mail adres" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;E-Mail adres&#39;" class="common-input mb-20 form-control" required="" type="text">
     <input name="name" placeholder="Telefon" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Telefon&#39;" class="common-input mb-20 form-control" required="" type="text">
 
@@ -38,6 +41,7 @@
       </select>
 
 <br>
+</form>
 
 </div>
 {% endblock %}
