--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -51,6 +51,12 @@
       </select>
 
 <br>
+
+<div class="col-lg-12">
+    <div class="alert-msg" style="text-align: left;"></div>
+    <button type="submit" class="primary-btn text-uppercase"> Göndər </a> </button>
+</div>
+
 </form>
 
 </div>
