--- a/contact/templates/author.html
+++ b/contact/templates/author.html
@@ -35,7 +35,7 @@
       </select>
       
     
-      {{ form.education_industry_experience }}
+      {{ form.education_industry }}
     <!-- <input name="name" placeholder="Təhsil və sənayə təcrübəniz'" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Təhsil və sənayə təcrübəniz&#39;" class="common-input mb-20 form-control" required="" type="text"> -->
 
 
